--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.app__input {
+.input {
   padding: 6px 16px;
   min-width: 200px;
   max-width: 100vw;
   font-size: 15px;
 }
-.app__submit {
+.submit {
   padding: 6px 16px;
   font-size: 15px;
   margin-left: 6px;
